<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_error"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="230dp"
                android:layout_height="150dp"
                android:layout_marginTop="76dp"
                android:contentDescription="@string/todo"
                android:visibility="visible"
                android:src="@drawable/person_icon" />

            <TextView
                android:id="@+id/name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/avatar"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:text="@string/username"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameContent"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailContent"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameContent"
                android:layout_width="200dp"
                android:layout_height="56dp"
                android:layout_below="@id/name"
                android:gravity="center_vertical"
                android:text="@string/nothing_here_yet"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/emailContent"
                android:layout_width="200dp"
                android:layout_height="56dp"
                android:layout_below="@id/email"
                android:gravity="center_vertical"
                android:text="@string/nothing_here_yet"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/addressContent"
                android:layout_width="350dp"
                android:layout_height="56dp"
                android:layout_below="@id/address"
                android:gravity="center_vertical"
                android:text="@string/nothing_here_yet"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/changePassword"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_below="@id/addressContent"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="150dp"
                android:background="@color/design_default_color_error"
                android:onClick="onClick"
                android:text="@string/done"
                android:textColor="@color/white"
                app:backgroundTint="@color/design_default_color_error" />

            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_marginStart="240dp"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="150dp"
                android:background="@color/primaryRed"
                android:onClick="onClick"
                android:text="@string/edit"
                android:textColor="@color/white"
                app:backgroundTint="@color/design_default_color_error" />

            <Button
                android:id="@+id/viewFavorite"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="605dp"
                android:background="@color/primaryRed"
                android:text="@string/favorite"
                android:textColor="@color/white"
                app:backgroundTint="@color/design_default_color_error" />

            <Button
                android:id="@+id/viewOrders"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="532dp"
                android:background="@color/primaryRed"
                android:onClick="onClick"
                android:text="@string/my_orders"
                android:textColor="@color/white"
                app:backgroundTint="@color/primaryRed" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
