...
            android:text="@string/skip_the_service"
            android:textColor="#303030"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
...
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/registerButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
...
