...
            android:maxWidth="200dp"
            android:queryHint="Shoveling">

        </SearchView>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="9dp"
...
